--- a/docs/thesis/references.bib
+++ b/docs/thesis/references.bib
@@ -1067,6 +1067,19 @@ year = "",
 	}
 }
 
+@article{
+	lamport:shostak:byzantine:generals,
+	title = "The Byzantine Generals Problem",
+	author = {Lamport, Leslie and Shostak, Robert and Pease, Marshall},
+	year = "1982",
+	journal = "ACM Transactions on Programming Languages and Systems",
+	volume = "4",
+	number = "3",
+	pages = "382-401",
+	month = "July",
+	howpublished = {https://people.eecs.berkeley.edu/~luca/cs174/byzantine.pdf}
+}
+
 % Toplogy algorithms 
 
 @article{
@@ -1271,7 +1284,7 @@ year = "",
 
 	howpublished = {
 	\url{https://eprint.iacr.org/2018/780.pdf}},
-haveit =   {pdf}
+	haveit =   {pdf}
 }
 
 @Article{niu:feng:selfish:mining:ethereum,
