--- a/docs/thesis/glossary.tex
+++ b/docs/thesis/glossary.tex
@@ -31,11 +31,16 @@
 
 \newglossaryentry{blockchain}{name={blockchain},description={A blockchain is a growing datastructure consistent of blocks containing transactions, a cryptograpic hash of the previous block and a timestamp. It is a record or ledger over the full transaction history }}
 
-\newglossaryentry{degree distribution}{name={degree distribution}, description={is the probability distribution over the nodes degree, i.e. the amount of edges . Usually denoted with a function $f(k)$ given the fraction of the network with exactly $k$ edges }}
+\newglossaryentry{degree distribution}{name={degree distribution}, description={is the probability distribution over the nodes degree, i.e. the amount of edges . Usually denoted with a function $f(k)$ giving the fraction of the network with exactly $k$ edges }}
 
 \newglossaryentry{miner}{name={miner}, description={A miner is a specific Bitcoin node that runs the \textit{Proof-of-Work} algorithm, i.e. finding blocks and filling them with valid transactions }}
 
 \newglossaryentry{Lightning Network}{name={Lightning Network}, description={is a second layer payment protocol consistent of payment channels built on a blockchain based base layer. Although it is not necesarily exclusive to Bitcoin; Bitcoin is the only base layer with major development efforts. The Lightning Network, as referred in this thesis, always refers to the network built on Bitcoin }}
 
-\newglossaryentry{channel}{name={channel}, description={, payment channel or micropayment channel is a locked up fund of Bitcoin between two nodes enabling near infinite secure payments at the cost of only a few on-chain transactions  }}
+\newglossaryentry{channel}{name={channel}, description={, payment channel or micropayment channel is a locked up fund of Bitcoin between two nodes enabling near infinite secure payments at the cost of only a few on-chain transactions }}
 
+\newglossaryentry{hash}{name={hash},description={a crypographic hash is created with a hashing function taking data of arbitrary size and outputs a hash with fixed size. The input data is usually difficult, or practically impossible, to inference the input data from the hash. A hash is sometimes referred to as a digest }}
+
+\newglossaryentry{node}{name={node},description={A node is participating actor in a network, a node is usually linked to other nodes through edges. Node is used somewhat ambigous in this thesis as both the Bitcoin Network protocol participants and the Lightning Network participants is referred to as nodes. Also referred to as a \textit{vertex}}}
+
+\newglossaryentry{label}{name={name},description={description}}
